deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calculator-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: calculator-app
  template:
    metadata:
      labels:
        app: calculator-app
    spec:
      containers:
      - name: calculator-app
        image: azharshaikh786/calculatorrepo:latest
        ports:
        - containerPort: 2323
