service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calculator-app-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 2323
  selector:
    app: calculator-app
