ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calculator-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/whitelist-source-range: "0.0.0.0/0"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - metnmat.xyz
    secretName: calculator-tls
  rules:
  - host: metnmat.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: calculator-app-service
            port:
              number: 80
